--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,10 @@
-{
+{"ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "target": "ES2020",
     "outDir": "./dist",
     "rootDir": "../server",
